--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 257394492179.dkr.ecr.us-east-1.amazonaws.com
       - REPOSITORY_URI=257394492179.dkr.ecr.us-east-1.amazonaws.com/gurindersingh-ecr
+      - echo "dckr_pat_pAaIib4LHq1Pv0T9oTCUOszh-eQ" | docker login --username "gurindersingh0001" --password-stdin
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
 
   build:
